Conditional Narration endings

--- a/allennella/mirrorDEMO/mirrormazedemo_gifs.html
+++ b/allennella/mirrorDEMO/mirrormazedemo_gifs.html
@@ -189,12 +189,11 @@
 	  '5,2': "I woke up, and met with him on the penultimate day and we had a friendly chat. He told me why he became a scribe - to impress his father - and what he wrote. We both understood that even though this was more of a mutual eulogy rather than a conversation it went on as if we had been friends for years.",
 	  '4,2': "He asked me if all mirrors did this to everyone, I looked at him woefully as I noticed tears began to pool in his eyes, and it was then I remembered it was his son who had vanished all those days ago.",
 	  '3,2': "I couldn’t find the strength to answer him. These were the last words I heard anyone speak. The next morning he was gone. And come the morning, the door to the hallway was opened.",
-	  '3,3': "I spent my last day, walking through what was now the maze of mirrors yelling out in anguish to whatever force was responsible for taking all these people away. I asked what or who gave the mirror the right to do this. But no matter what question I asked I heard nothing. I began beating my palms against the mirror until bruises began to form and blood began pouring from my hands. I began to cry and fall to my knees. I was laying down sobbing when the echo of the boy’s voice. It caught me by surprise, I didn’t even recognize it at first. I had to sit for a moment and recollect where I had heard it before, while I was remembering I noticed I had been moving toward the sound. It led me to the corner of the maze to an open door… In the mirror was my bedroom… I took one step toward it… and down I fell… I wondered where I was going until suddenly darkness overtook my eyes. I had no voice, I could not feel anything, I could not hear anything. Why is this happening to me…",
+	  //'3,3': "I spent my last day, walking through what was now the maze of mirrors yelling out in anguish to whatever force was responsible for taking all these people away. I asked what or who gave the mirror the right to do this. But no matter what question I asked I heard nothing. I began beating my palms against the mirror until bruises began to form and blood began pouring from my hands. I began to cry and fall to my knees. I was laying down sobbing when the echo of the boy’s voice. It caught me by surprise, I didn’t even recognize it at first. I had to sit for a moment and recollect where I had heard it before, while I was remembering I noticed I had been moving toward the sound. It led me to the corner of the maze to an open door… In the mirror was my bedroom… I took one step toward it… and down I fell… I wondered where I was going until suddenly darkness overtook my eyes. I had no voice, I could not feel anything, I could not hear anything. Why is this happening to me…",
 	  '3,6': "The more I blinked the more clear the image became. It overcame my vision entirely. What I once thought was a desert quickly revealed itself to be my room. I was looking at myself. I watched as the phone rang, just like before. I was seeing what just happened. I didn’t know what to think.",
 	  '2,6': "I leaned against the mirror, but as I took a step toward it, I kicked the mirror with my foot, and I watched myself turn around to face the mirror…",
 	  '2,5,N': "But soon this mirage managed to slip away, and I found myself standing before a great hall of mirrors. Hundreds, thousands maybe. I once again found myself unable to move. “What is going on?” I thought. I only had two answers, turn left or right and find out.",
 	  '1,5': "I followed my heart...",
-	  '1,6': " …and I stood before a locked door, puzzled as ever. But as I stared at the man in the mirror I noticed it was ME. That same me that once made me feel so safe. That interaction felt like years ago. The smile that painted my face was the same kind you would get coming face to face with an old friend you haven’t seen in years. My eyes began to tear up, there was no emotion behind it, they fell on their own. As the first tear hit the ground, the door opened with the sound of grinding metal and an almost blinding light. I walked through; Now I see.",
 	  '3,5,E': "I turned right… The more I blinked the more clear the image became. It overcame my vision entirely. What I once thought was a desert quickly revealed itself to be my room. I was looking at myself. I watched as the phone rang, just like before. I was seeing what just happened. I didn’t know what to think. ",
 	  '2,6': "I leaned against the mirror, but as I took a step toward it, I kicked the mirror with my foot, and I watched myself turn around to face the mirror… ",
 	  '2,5': "But soon this mirage managed to slip away, and I found myself standing before a great hall of mirrors. Hundreds, thousands maybe. I once again found myself unable to move. “What is going on?” I thought. I only had two answers, turn left or right and find out.",
@@ -211,7 +210,7 @@
 	  '6,4,S': "Another fork in the road, by now I had almost lost full control of my body, but the right hand path did catch my eye. But ahead was the source of the music. I danced for a while until I decided what to do.",
 	  '6,5': "I stepped forward only to find the beautiful music had subsided. It reached its climax with an echoing hum that sounded like it came from every direction. I sat and tried to remember what it sounded like but the incessant humming had clouded my memory, and I was nearly deaf from the ringing it put in my ears. The sound became so intolerable I decided to step forward.",
 	  '6,6': "All this seemed to stop as I heard a door open… in this moment everything culminated in all my senses. I could see, I could hear, I could feel, I could taste, I could smell. Every sense was on overdrive, the pleasure was possessive, but something was missing…",
-	  '5,6': "I stepped forward. Finally, the peace I had been yearning for, the release I had been waiting for. I felt as if I was flying through the door and into space and everything became true again… I had become me. Everything made so much sense now, Heaven and earth were mine… I had been made in heaven, I had ACHIEVED HEAVEN. I had been placed back within the lost firmament. I had regained truth, I had gained ME.",
+	  //'5,6,W': "I stepped forward. Finally, the peace I had been yearning for, the release I had been waiting for. I felt as if I was flying through the door and into space and everything became true again… I had become me. Everything made so much sense now, Heaven and earth were mine… I had been made in heaven, I had ACHIEVED HEAVEN. I had been placed back within the lost firmament. I had regained truth, I had gained ME.",
 	  '5,4,W': "Without realizing I spun and stepped to the right and as soon as this happened the music stopped. I stood and looked around. Wait, have I been here before? Uh… Wait. Yea this place does look familiar… Wait where am I???",
 	  '5,5,S': "Okay, I shouldn’t panic. I feel as though I’ve been here before. I’m not sure why I feel that way but maybe I can find my way back if I just…",
 	  '4,1': "I walked through the door only to be faced with the beginning of the maze. This time however, I turned right… Or, was it left? Huh, I can’t seem to remember where to go… I decided to turn around but there was now a wall in front of me… I tried to retrace my steps. *You are forever lost within the walls of the maze.*",
@@ -219,14 +218,90 @@
 	  '1,4': "I decided to go left. I took a step forward and noticed I began to clench my fist and gnash my teeth. My hand was bound so tightly I was almost shocked I didn’t notice it before. It felt right for some reason.",
 	  '1,3': "My hand was so tight now, my nails began cutting into my palms and blood began to leak from in between my fingers. I stopped for a second to look at the blood. I began to lap up my own blood. It filled me with IMMENSE satisfaction. I needed more. I sat for a while and studied the flavor of my own blood. It was oddly sweet. I wondered if the blood of others tasted as good as my own.",
 	  '1,2': "I took another step forward but my hunger became almost intolerable. And the pain in my palms was making it hard to enjoy the pleasures of my blood. I looked ahead to one of the mirrors and saw myself surrounded by people. They appeared to be villagers in a desert. I stared at them. I began to lick my lips with anticipation.I stepped through the mirror and found myself in the village at night. I was so excited I was shivering, an old man saw me behind one of the huts and smiled at me. I smiled at him and he smiled back and walked up to me and began talking about the mirror.",
-	  '1,1': "I was too focused on the taste of his blood to even hear what he was saying and as he turned to grab something that fell out of his hand I beat him over the head with a nearby rock. I hadn’t noticed he had a sword on his side until now. I stared at it and smiled wide. Somehow no one else seemed to be woken up by the commotion. I withdrew the sword and cut his arm and tasted his blood. It was even sweeter than my own. I was so absorbed in the taste of his blood I carelessly took a bite of his flesh and it was even more delicious than his blood. And it was then I realized… I have an entire village of samples to take. All of them are asleep. My smile was so big it hurt. I stepped into each hut and massacred almost all of them. I thought the sun was starting to rise by the time I snapped out of this. But it was the mirror opening as if it was a door. It beckoned me to put each of the bodies into it. I did what it said. As I finished putting the last body into the mirror I saw myself. What looked back at me was someone different. But by this point it didn’t matter. I had blood to take, and a mirror to feed. When I was finished I stepped back into the mirror. And I waited to consume the rest of them…",
+	  //'1,1,N': "I was too focused on the taste of his blood to even hear what he was saying and as he turned to grab something that fell out of his hand I beat him over the head with a nearby rock. I hadn’t noticed he had a sword on his side until now. I stared at it and smiled wide. Somehow no one else seemed to be woken up by the commotion. I withdrew the sword and cut his arm and tasted his blood. It was even sweeter than my own. I was so absorbed in the taste of his blood I carelessly took a bite of his flesh and it was even more delicious than his blood. And it was then I realized… I have an entire village of samples to take. All of them are asleep. My smile was so big it hurt. I stepped into each hut and massacred almost all of them. I thought the sun was starting to rise by the time I snapped out of this. But it was the mirror opening as if it was a door. It beckoned me to put each of the bodies into it. I did what it said. As I finished putting the last body into the mirror I saw myself. What looked back at me was someone different. But by this point it didn’t matter. I had blood to take, and a mirror to feed. When I was finished I stepped back into the mirror. And I waited to consume the rest of them…",
 	  '2,3': "I stepped forward. At this point the isolation in this maze began to overtake me. I was growing increasingly paranoid. Where was this doubt coming from? I feel as though I have been waiting for this moment my whole life. Why was I so afraid now…",
 	  '2,2': "I took another step forward but this dread only seemed to get stronger. I noticed I wasn’t the one moving myself forward. It was the mirror. I tried my best to turn back but I couldn’t stop moving.",
 	  '2,1': "By this time I remembered something I read in my book before I entered this maze. And it helped me calm down. It said: “A river does not cut through stone with force, but through persistence. A river of force destroys and loses more than a river in flow.” With these words in mind I decided having come this far now, my only option was to embrace what would happen.",
-	  '1,1': "I turned toward the doorway in front of me. All my previous anxiety seemed to vanish. I wasn’t happy, I wasn’t sad. I just was. As I walked through the door the light inside of the room, I was completely overtaken and possessed with a feeling of wholeness. Everything became clear once more… I had become WHOLE.",
-
+	  //'3,1,E': "I turned toward the doorway in front of me. All my previous anxiety seemed to vanish. I wasn’t happy, I wasn’t sad. I just was. As I walked through the door the light inside of the room, I was completely overtaken and possessed with a feeling of wholeness. Everything became clear once more… I had become WHOLE.",
+	  
     };
-
+	//specialized Exit Narration
+	narrationMap["1,6,S"] = {
+		default: "…and I stood before a locked door, puzzled as ever. But as I stared at the man in the mirror I noticed it was ME. That same me that once made me feel so safe. That interaction felt like years ago. The smile that painted my face was the same kind you would get coming face to face with an old friend you haven’t seen in years. My eyes began to tear up, there was no emotion behind it, they fell on their own. As the first tear hit the ground, the door opened with the sound of grinding metal and an almost blinding light. I walked through; Now I see.",
+		Aries: "Ar",
+		Taurus: "Ta",
+		Gemini: "Ge",
+		Cancer: "Ca",
+		Leo: "Le",
+		Virgo: "Vi",
+		Libra: "Li",
+		Scorpio: "Sc",
+		Sagittarius: "Sa",
+		Capricorn: "Ca",
+		Aquarius: "Aq",
+		Pisces: "Pi",
+	};
+	narrationMap["3,1,E"] = {
+		default: "I turned toward the doorway in front of me. All my previous anxiety seemed to vanish. I wasn’t happy, I wasn’t sad. I just was. As I walked through the door the light inside of the room, I was completely overtaken and possessed with a feeling of wholeness. Everything became clear once more… I had become WHOLE.",
+		Aries: "Ar",
+		Taurus: "Ta",
+		Gemini: "Ge",
+		Cancer: "Ca",
+		Leo: "Le",
+		Virgo: "Vi",
+		Libra: "Li",
+		Scorpio: "Sc",
+		Sagittarius: "Sa",
+		Capricorn: "Ca",
+		Aquarius: "Aq",
+		Pisces: "Pi",
+	};
+	narrationMap["3,3,S"] = {
+		default: "I spent my last day, walking through what was now the maze of mirrors yelling out in anguish to whatever force was responsible for taking all these people away. I asked what or who gave the mirror the right to do this. But no matter what question I asked I heard nothing. I began beating my palms against the mirror until bruises began to form and blood began pouring from my hands. I began to cry and fall to my knees. I was laying down sobbing when the echo of the boy’s voice. It caught me by surprise, I didn’t even recognize it at first. I had to sit for a moment and recollect where I had heard it before, while I was remembering I noticed I had been moving toward the sound. It led me to the corner of the maze to an open door… In the mirror was my bedroom… I took one step toward it… and down I fell… I wondered where I was going until suddenly darkness overtook my eyes. I had no voice, I could not feel anything, I could not hear anything. Why is this happening to me…",
+		Aries: "Ar",
+		Taurus: "Ta",
+		Gemini: "Ge",
+		Cancer: "Ca",
+		Leo: "Le",
+		Virgo: "Vi",
+		Libra: "Li",
+		Scorpio: "Sc",
+		Sagittarius: "Sa",
+		Capricorn: "Ca",
+		Aquarius: "Aq",
+		Pisces: "Pi",
+	};
+	narrationMap["5,6,W"] = {
+		default: "I stepped forward. Finally, the peace I had been yearning for, the release I had been waiting for. I felt as if I was flying through the door and into space and everything became true again… I had become me. Everything made so much sense now, Heaven and earth were mine… I had been made in heaven, I had ACHIEVED HEAVEN. I had been placed back within the lost firmament. I had regained truth, I had gained ME.",
+		Aries: "Ar",
+		Taurus: "Ta",
+		Gemini: "Ge",
+		Cancer: "Ca",
+		Leo: "Le",
+		Virgo: "Vi",
+		Libra: "Li",
+		Scorpio: "Sc",
+		Sagittarius: "Sa",
+		Capricorn: "Ca",
+		Aquarius: "Aq",
+		Pisces: "Pi",
+	};
+	narrationMap["1,1,N"] = {
+		default: "I was too focused on the taste of his blood to even hear what he was saying and as he turned to grab something that fell out of his hand I beat him over the head with a nearby rock. I hadn’t noticed he had a sword on his side until now. I stared at it and smiled wide. Somehow no one else seemed to be woken up by the commotion. I withdrew the sword and cut his arm and tasted his blood. It was even sweeter than my own. I was so absorbed in the taste of his blood I carelessly took a bite of his flesh and it was even more delicious than his blood. And it was then I realized… I have an entire village of samples to take. All of them are asleep. My smile was so big it hurt. I stepped into each hut and massacred almost all of them. I thought the sun was starting to rise by the time I snapped out of this. But it was the mirror opening as if it was a door. It beckoned me to put each of the bodies into it. I did what it said. As I finished putting the last body into the mirror I saw myself. What looked back at me was someone different. But by this point it didn’t matter. I had blood to take, and a mirror to feed. When I was finished I stepped back into the mirror. And I waited to consume the rest of them…",
+		Aries: "Ar",
+		Taurus: "Ta",
+		Gemini: "Ge",
+		Cancer: "Ca",
+		Leo: "Le",
+		Virgo: "Vi",
+		Libra: "Li",
+		Scorpio: "Sc",
+		Sagittarius: "Sa",
+		Capricorn: "Ca",
+		Aquarius: "Aq",
+		Pisces: "Pi",
+	};
+	
     let position = { col: 4, row: 6 };
     let facing = 'N';
     let previousState = null;
@@ -288,22 +363,27 @@
 
       const cellKey = `${toCol},${toRow}`;
 	  const facingKey = `${cellKey},${facing}`;
-      if (cellKey === '5,6') {
-        setTimeout(() => showPopup(`Your astrological sign is: ${birthSign}`), 20000);
-      }
       const available = maze[cellKey] || [];
       const fIndex = directions.indexOf(toFacing);
       const left = directions[(fIndex + 3) % 4];
       const right = directions[(fIndex + 1) % 4];
       const forward = toFacing;
 	  const narration = narrationMap[facingKey] || narrationMap[cellKey] || "";
+	  let narrationText = '';
+	  
+
+		if (typeof narration === 'string'){
+			narrationText = narration;
+		} else if (typeof narration === 'object' && narration !== null) {
+			narrationText = narration[birthSign] || narration.default || '';
+		}
 
       document.getElementById('leftBtn').disabled = !available.includes(left);
       document.getElementById('rightBtn').disabled = !available.includes(right);
       document.getElementById('forwardBtn').disabled = !available.includes(forward);
 
       document.getElementById('statusText').textContent = `Current Position: (${toCol}, ${toRow}) Facing: ${toFacing}`;
-      document.getElementById('narrationText').textContent = narration;
+      document.getElementById('narrationText').textContent = narrationText;
 
       previousState = [toCol, toRow, toFacing];
       preloadNextImages();
