narration margin update

--- a/allennella/mirrorDEMO/mirrormazedemo_gifs.html
+++ b/allennella/mirrorDEMO/mirrormazedemo_gifs.html
@@ -32,6 +32,8 @@
     }
     #narrationText {
       margin-top: 10px;
+	  margin-left: 400px;
+	  margin-right: 400px;
       font-size: 16px;
       color: #0ff;
     }
