Title change etc

--- a/allennella/mirrorDEMO/mirrormazedemo_gifs.html
+++ b/allennella/mirrorDEMO/mirrormazedemo_gifs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mirror Maze Demo</title>
+  <title>Allen Nella's House of Mirrors</title>
   <style>
     body {
       font-family: sans-serif;
@@ -32,8 +32,8 @@
     }
     #narrationText {
       margin-top: 10px;
-	  margin-left: 400px;
-	  margin-right: 400px;
+	  margin-left: 600px;
+	  margin-right: 600px;
       font-size: 16px;
       color: #0ff;
     }
@@ -222,7 +222,7 @@
 	  '5,5,S': "Okay, I shouldn’t panic. I feel as though I’ve been here before. I’m not sure why I feel that way but maybe I can find my way back if I just…",
 	  '4,1': "I walked through the door only to be faced with the beginning of the maze. This time however, I turned right… Or, was it left? Huh, I can’t seem to remember where to go… I decided to turn around but there was now a wall in front of me… I tried to retrace my steps. *You are forever lost within the walls of the maze.*",
 	  '2,4': "Wow, even more decisions to make… before me 2 paths. The music and the visions seemed to have subsided. Now this deafening silence overcame me. I was almost too afraid to move. I had to make a choice. ",
-	  '1,4': "I decided to go left. I took a step forward and noticed I began to clench my fist and gnash my teeth. My hand was bound so tightly I was almost shocked I didn’t notice it before. It felt right for some reason.",
+	  '1,4': "I decided to go forward and noticed I began to clench my fist and gnash my teeth. My hand was bound so tightly I was almost shocked I didn’t notice it before. It felt right for some reason.",
 	  '1,3': "My hand was so tight now, my nails began cutting into my palms and blood began to leak from in between my fingers. I stopped for a second to look at the blood. I began to lap up my own blood. It filled me with IMMENSE satisfaction. I needed more. I sat for a while and studied the flavor of my own blood. It was oddly sweet. I wondered if the blood of others tasted as good as my own.",
 	  '1,2': "I took another step forward but my hunger became almost intolerable. And the pain in my palms was making it hard to enjoy the pleasures of my blood. I looked ahead to one of the mirrors and saw myself surrounded by people. They appeared to be villagers in a desert. I stared at them. I began to lick my lips with anticipation.I stepped through the mirror and found myself in the village at night. I was so excited I was shivering, an old man saw me behind one of the huts and smiled at me. I smiled at him and he smiled back and walked up to me and began talking about the mirror.",
 	  //'1,1,N': "I was too focused on the taste of his blood to even hear what he was saying and as he turned to grab something that fell out of his hand I beat him over the head with a nearby rock. I hadn’t noticed he had a sword on his side until now. I stared at it and smiled wide. Somehow no one else seemed to be woken up by the commotion. I withdrew the sword and cut his arm and tasted his blood. It was even sweeter than my own. I was so absorbed in the taste of his blood I carelessly took a bite of his flesh and it was even more delicious than his blood. And it was then I realized… I have an entire village of samples to take. All of them are asleep. My smile was so big it hurt. I stepped into each hut and massacred almost all of them. I thought the sun was starting to rise by the time I snapped out of this. But it was the mirror opening as if it was a door. It beckoned me to put each of the bodies into it. I did what it said. As I finished putting the last body into the mirror I saw myself. What looked back at me was someone different. But by this point it didn’t matter. I had blood to take, and a mirror to feed. When I was finished I stepped back into the mirror. And I waited to consume the rest of them…",
