--- a/nxhealth/nxhealthhome.html
+++ b/nxhealth/nxhealthhome.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('../assets/MatrixTile.png');
+      background: url('../assets/repeatingback.gif');
       background-size: auto;
       font-family: Arial, sans-serif;
       color: white;
@@ -284,7 +284,7 @@
           <div class="growing-minds-text">
             Gerber Law Group has partnered with Growing Minds Learning Center to diagnose potential negative behavioral outcomes from recalled products. Please complete this diagnostic test with your child and submit your child's unique test reference code below, along with a working email to see if you may qualify for compensation, as well as expense free treatment at Growing Minds.
           </div>
-          <img src="../assets/growing_minds_logo.png" alt="Growing Minds Learning Center" class="growing-minds-logo">
+          <img src="../assets/gmlc.png" alt="Growing Minds Learning Center" class="growing-minds-logo">
         </div>
         
         <div class="diagnostic-title">
