--- a/jesterspizza/delivery.html
+++ b/jesterspizza/delivery.html
@@ -94,7 +94,7 @@
 </head>
 <body>
   <div class="header">
-    <a href="home.html"><img src="../assets/jesterpizzalogo.png" alt="Jester Pizza Logo" height="120" /></a>
+    <img src="../assets/jesterpizzalogo.png" alt="Jester Pizza Logo" height="120" />
     <div class="nav-buttons">
       <a href="delivery.html"><img src="../assets/JesterNavDelivery.png" alt="Delivery" /></a>
       <a href="#"><img src="../assets/JesterNavMenu.png" alt="Menu" /></a>
