--- a/allennella/mirrorDEMO/splashpage.html
+++ b/allennella/mirrorDEMO/splashpage.html
@@ -75,10 +75,11 @@
             transition: opacity 2s ease-in-out;
             transform: scaleX(-1); /* Mirror the webcam feed */
             border-radius: 200px 200px 0 0;
+			filter: blur(5px);
         }
 
         .webcam-overlay.visible {
-            opacity: 0.6;
+            opacity: 0.2;
         }
 
         .mirror-reflection {
