--- a/allennella/mirrorDEMO/splashpage.html
+++ b/allennella/mirrorDEMO/splashpage.html
@@ -34,12 +34,12 @@
         }
 
         .logo {
-            font-size: 4rem;
-            font-weight: bold;
-            color: #c0c0c0;
-            text-shadow: 2px 2px 8px rgba(255,255,255,0.3);
             margin-bottom: 40px;
-            letter-spacing: 3px;
+        }
+
+        .logo img {
+            height: 120px;
+            width: auto;
         }
 
         .mirror-container {
@@ -47,13 +47,6 @@
             width: 400px;
             height: 500px;
             margin-bottom: 30px;
-            border-radius: 200px 200px 0 0;
-            background: linear-gradient(135deg, #1a1a1a 0%, #333 50%, #1a1a1a 100%);
-            border: 8px solid #444;
-            overflow: hidden;
-            box-shadow: 
-                inset 0 0 50px rgba(255,255,255,0.1),
-                0 10px 30px rgba(0,0,0,0.8);
         }
 
         .mirror-surface {
@@ -63,6 +56,25 @@
             position: relative;
             border-radius: 200px 200px 0 0;
             overflow: hidden;
+        }
+
+        .mirror-frame {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 10;
+            pointer-events: none;
+        }
+
+        .mirror-frame img {
+			width: 130%;
+			height: 130%;
+			object-fit: contain;
+			position: relative;
+			top: -5%;
+			left: -15%;
         }
 
         .webcam-overlay {
@@ -75,19 +87,19 @@
             transition: opacity 2s ease-in-out;
             transform: scaleX(-1); /* Mirror the webcam feed */
             border-radius: 200px 200px 0 0;
-			filter: blur(5px);
+            filter: blur(3px);
         }
 
         .webcam-overlay.visible {
-            opacity: 0.2;
+            opacity: 0.6;
         }
 
         .mirror-reflection {
             position: absolute;
             top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            left: -100%;
+            width: 200%;
+            height: 200%;
             background: linear-gradient(
                 45deg,
                 transparent 30%, 
@@ -101,8 +113,8 @@
         }
 
         @keyframes mirrorShimmer {
-            0%, 100% { transform: translateX(-100%); }
-            50% { transform: translateX(100%); }
+            0%, 100% { transform: translateX(-50%); }
+            50% { transform: translateX(50%); }
         }
 
         .mantra-text {
@@ -122,25 +134,19 @@
         }
 
         .enter-btn, .ready-btn {
-            background: linear-gradient(135deg, #2a2a2a, #1a1a1a);
-            border: 2px solid #444;
-            color: #c0c0c0;
-            padding: 15px 40px;
-            font-size: 1.1rem;
-            font-family: 'Georgia', serif;
-            border-radius: 8px;
+            background: #999;
+            border: 1px solid #999;
+            color: #000;
+            padding: 8px 16px;
+            font-size: 1rem;
+            font-family: Arial, sans-serif;
+            border-radius: 3px;
             cursor: pointer;
-            transition: all 0.3s ease;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+            transition: all 0.2s ease;
         }
 
         .enter-btn:hover, .ready-btn:hover {
-            background: linear-gradient(135deg, #3a3a3a, #2a2a2a);
-            border-color: #666;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(0,0,0,0.7);
+            background: #777;
         }
 
         .ready-btn {
@@ -175,7 +181,6 @@
         .flash-message {
             font-size: 3rem;
             color: #000;
-            font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
             letter-spacing: 3px;
         }
@@ -223,12 +228,17 @@
 </head>
 <body>
     <div class="splash-container">
-        <div class="logo">ALLEN NELLA</div>
+        <div class="logo">
+            <img src="allennellalogo.png" alt="Allen Nella Logo" />
+        </div>
         
         <div class="mirror-container">
             <div class="mirror-surface">
                 <video id="webcamVideo" class="webcam-overlay" autoplay playsinline muted></video>
                 <div class="mirror-reflection"></div>
+            </div>
+            <div class="mirror-frame">
+                <img src="mirrorframe_an.png" alt="Mirror Frame" />
             </div>
         </div>
         
