--- a/sebbies/reviews_a1-02.html
+++ b/sebbies/reviews_a1-02.html
@@ -362,13 +362,16 @@
 	}
 	
 .bottom-logo {
-  text-align: center;
-  margin: 30px 0 20px 0;
+  display: inline-block;
+  min-height: 44px;
+  min-width: 44px;
+  padding: 10px;
 }
 
 .bottom-logo img {
   max-width: 130px;
   height: auto;
+  display: block;
 }
   </style>
 </head>
