revert sig button

--- a/sebbies/reviews_a1-02.html
+++ b/sebbies/reviews_a1-02.html
@@ -362,16 +362,13 @@
 	}
 	
 .bottom-logo {
-  display: inline-block;
-  min-height: 44px;
-  min-width: 44px;
-  padding: 10px;
+  text-align: center;
+  margin: 30px 0 20px 0;
 }
 
 .bottom-logo img {
   max-width: 130px;
   height: auto;
-  display: block;
 }
   </style>
 </head>
