--- a/curtaincall/home.html
+++ b/curtaincall/home.html
@@ -417,10 +417,10 @@
 				<a href="inquiries.html">Inquiries</a>
 			  </div>
 			  <div class="menu-item" data-spotlight="../assets/spotlight-reviews.png">
-				<a href="#">Reviews</a>
+				<a href="reviews.html">Reviews</a>
 			  </div>
 			  <div class="menu-item" data-spotlight="../assets/spotlight-galleries.png">
-				<a href="#">Gallery</a>
+				<a href="gallery.html">Gallery</a>
 			  </div>
 			</div>
 
