--- a/curtaincall/home_a1-02.html
+++ b/curtaincall/home_a1-02.html
@@ -419,7 +419,7 @@
         <a href="home_a1-02.html">Home</a>
       </div>
       <div class="menu-item" data-spotlight="../assets/broomstick-inquiries.png">
-        <a href="inquiries.html">Inquiries</a>
+        <a href="#">Inquiries</a>
       </div>
       <div class="menu-item" data-spotlight="../assets/broomstick-reviews.png">
         <a href="../sebbies/reviews_a1-02.html">Reviews</a>
