added link to rooster and an splash on all nav

--- a/curtaincall/home_a1-02.html
+++ b/curtaincall/home_a1-02.html
@@ -367,7 +367,7 @@
 		<a href="../nxhealth/nxhealthhome.html" class="sidebar-nav-button">
 		  <img src="../assets/nxh_btn.png" alt="NX Health" />
 		</a>
-		<a href="../index.html" class="sidebar-nav-button">
+		<a href="../rooster/rooster.html" class="sidebar-nav-button">
 		  <img src="../assets/rooster_btn.png" alt="Rooster" />
 		</a>
 		<a href="../thesecret/secrethome.html" class="sidebar-nav-button">
