--- a/jesterspizza/home.html
+++ b/jesterspizza/home.html
@@ -346,7 +346,7 @@
 	  </div>
 	  
 	  <div class="sidebar-nav-buttons">
-		<a href="../allennella/mirrordemo/mirrormazedemo_gifs.html" class="sidebar-nav-button">
+		<a href="../allennella/mirrordemo/splashpage.html" class="sidebar-nav-button">
 		  <img src="../assets/allen_btn.png" alt="Allen Nella" />
 		</a>
 		<a href="../blueroan/home.html" class="sidebar-nav-button">
@@ -370,7 +370,7 @@
 		<a href="../nxhealth/nxhealthhome.html" class="sidebar-nav-button">
 		  <img src="../assets/nxh_btn.png" alt="NX Health" />
 		</a>
-		<a href="../index.html" class="sidebar-nav-button">
+		<a href="../rooster/rooster.html" class="sidebar-nav-button">
 		  <img src="../assets/rooster_btn.png" alt="Rooster" />
 		</a>
 		<a href="../thesecret/secrethome.html" class="sidebar-nav-button">
