--- a/blueroan/menu.html
+++ b/blueroan/menu.html
@@ -263,7 +263,7 @@
 		<a href="../jesterspizza/home.html" class="sidebar-nav-button">
 		  <img src="../assets/jester_btn.png" alt="Jester's Pizza" />
 		</a>
-		<a href="../index.html" class="sidebar-nav-button">
+		<a href="../grayjones/home.html" class="sidebar-nav-button">
 		  <img src="../assets/jones_btn.png" alt="Mayor Gray Jones" />
 		</a>
 		<a href="../nxhealth/nxhealthhome.html" class="sidebar-nav-button">
