--- a/curtaincall/inquiries.html
+++ b/curtaincall/inquiries.html
@@ -243,7 +243,7 @@
 	  </div>
 	  
 	  <div class="sidebar-nav-buttons">
-		<a href="../allennella/mirrordemo/mirrormazedemo_gifs.html" class="sidebar-nav-button">
+		<a href="../allennella/mirrordemo/splashpage.html" class="sidebar-nav-button">
 		  <img src="../assets/allen_btn.png" alt="Allen Nella" />
 		</a>
 		<a href="../blueroan/home.html" class="sidebar-nav-button">
@@ -261,13 +261,13 @@
 		<a href="../jesterspizza/home.html" class="sidebar-nav-button">
 		  <img src="../assets/jester_btn.png" alt="Jester's Pizza" />
 		</a>
-		<a href="../index.html" class="sidebar-nav-button">
+		<a href="../grayjones/home.html" class="sidebar-nav-button">
 		  <img src="../assets/jones_btn.png" alt="Mayor Gray Jones" />
 		</a>
 		<a href="../nxhealth/nxhealthhome.html" class="sidebar-nav-button">
 		  <img src="../assets/nxh_btn.png" alt="NX Health" />
 		</a>
-		<a href="../index.html" class="sidebar-nav-button">
+		<a href="../rooster/rooster.html" class="sidebar-nav-button">
 		  <img src="../assets/rooster_btn.png" alt="Rooster" />
 		</a>
 		<a href="../thesecret/secrethome.html" class="sidebar-nav-button">
